fixed carousel spacing
fixed carousel spacing

--- a/css/style.css
+++ b/css/style.css
@@ -534,7 +534,7 @@ section.testimonial {
    display: flex;
    justify-content: center;
    align-items: center;
-   padding: 160px 0px 234px 0px;
+   padding: 147px 0px 147px 0px;
 }
 
 .client-text h3 {
